<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/paddingTop"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    android:paddingBottom="@dimen/paddingBottom"

    tools:context="com.gamez.formcontacto.Confirmacion">
    
    <TextView
        android:id="@+id/tituloConfirmacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_confirmacion"
        android:textStyle="bold"
        android:textSize="@dimen/titulo"
        android:textAlignment="center"
        android:paddingTop="@dimen/paddingTop"/>

    <ScrollView
        android:id="@+id/svDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloConfirmacion">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/colorAccent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTopBottomItems">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iconuser"/>
                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombre del Contacto"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/datosConfirmar"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTopBottomItems">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iconcalendar"/>
                <TextView
                    android:id="@+id/tvFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Fecha de Nacimiento"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/datosConfirmar"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iconphone"/>
                <TextView
                    android:id="@+id/tvTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Teléfono del Contacto"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/datosConfirmar"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTopBottomItems">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iconmail"/>
                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Correo Electrónico"
                    android:textSize="@dimen/datosConfirmar"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/paddingTopBottomItems">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iconedit"/>
                <TextView
                    android:id="@+id/tvDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Descripción del Contacto"
                    android:textSize="@dimen/datosConfirmar"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/svDatos"
        android:text="@string/btnEditar"
        />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSiguiente"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false"
        android:theme="@style/btnContinue"/>
</RelativeLayout>
